# src/generated/src/main/java/spring/ru/springtest/api/NotificationsApi.java
@@ -1,0 +1,143 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.6.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package spring.ru.springtest.api;
+
+import spring.ru.springtest.dto.response.ErrorResponse;
+import spring.ru.springtest.dto.create.NotificationCreateRequest;
+import spring.ru.springtest.dto.response.NotificationResponse;
+import java.util.UUID;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.HttpStatus;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.6.0")
+@Validated
+@Tag(name = "notifications", description = "the notifications API")
+public interface NotificationsApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /notifications : Create notification
+     *
+     * @param notificationCreateRequest  (required)
+     * @return Created (status code 201)
+     *         or Validation error (status code 400)
+     */
+    @Operation(
+        operationId = "createNotification",
+        summary = "Create notification",
+        responses = {
+            @ApiResponse(responseCode = "201", description = "Created", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = NotificationResponse.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Validation error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/notifications",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    @ResponseStatus(HttpStatus.CREATED)
+    
+    default NotificationResponse createNotification(
+        @Parameter(name = "NotificationCreateRequest", description = "", required = true) @Valid @RequestBody NotificationCreateRequest notificationCreateRequest
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"recipient\" : \"recipient\", \"id\" : \"046b6c7f-0b8a-43b9-b35d-6489e6daee91\", \"message\" : \"message\", \"status\" : \"status\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"code\" : \"code\", \"details\" : [ \"details\", \"details\" ], \"message\" : \"message\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        throw new IllegalArgumentException("Not implemented");
+
+    }
+
+
+    /**
+     * GET /notifications/{id} : Get notification by id
+     *
+     * @param id  (required)
+     * @return Notification found (status code 200)
+     *         or Notification not found (status code 404)
+     */
+    @Operation(
+        operationId = "getNotificationById",
+        summary = "Get notification by id",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Notification found", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = NotificationResponse.class))
+            }),
+            @ApiResponse(responseCode = "404", description = "Notification not found", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/notifications/{id}",
+        produces = { "application/json" }
+    )
+    @ResponseStatus(HttpStatus.OK)
+    
+    default NotificationResponse getNotificationById(
+        @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") UUID id
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"recipient\" : \"recipient\", \"id\" : \"046b6c7f-0b8a-43b9-b35d-6489e6daee91\", \"message\" : \"message\", \"status\" : \"status\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"code\" : \"code\", \"details\" : [ \"details\", \"details\" ], \"message\" : \"message\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        throw new IllegalArgumentException("Not implemented");
+
+    }
+
+}
